@@ -1,4 +1,4 @@
-.\" RCSid "$Id: xshowtrace.1,v 1.3 2004/01/01 19:31:45 greg Exp $"
+.\" RCSid "$Id: xshowtrace.1,v 1.4 2005/04/19 18:44:21 greg Exp $"
 .TH XSHOWTRACE 1 11/15/93 RADIANCE
 .SH NAME
 xshowtrace - interactively show rays traced on RADIANCE image under X11
@@ -6,6 +6,8 @@ xshowtrace - interactively show rays traced on RADIANCE image under X11
 .B xshowtrace
 [
 .B \-s
+][
+.B \-T
 ][
 .B "rtrace options"
 ]
@@ -32,6 +34,9 @@ The
 .I \-s
 option slows the display of each ray traced to make it easier to
 follow the process.
+The
+.I \-T
+option traces rays to light sources, which are normally hidden.
 .SH AUTHOR
 Greg Ward
 .SH BUGS
